@@ -2,45 +2,38 @@
 #
 # Copyright (C) 2003 Christophe Varoqui, <christophe.varoqui@free.fr>
 
-SUBDIRS = klibc libsysfs libdevmapper \
+BUILDDIRS = klibc libsysfs libdevmapper \
           devmap_name multipath multipathd kpartx
 
+INSTALLDIRS = devmap_name multipath multipathd kpartx
+
 recurse:
-	@for dir in $(SUBDIRS); do\
+	@for dir in $(BUILDDIRS); do\
 	$(MAKE) -C $$dir ; \
 	done
 
 recurse_clean:
-	@for dir in $(SUBDIRS); do\
+	@for dir in $(BUILDDIRS); do\
 	$(MAKE) -C $$dir clean ; \
 	done
 
 recurse_install:
-	@for dir in $(SUBDIRS); do\
+	@for dir in $(INSTALLDIRS); do\
 	$(MAKE) -C $$dir install ; \
 	done
 
 recurse_uninstall:
-	@for dir in $(SUBDIRS); do\
+	@for dir in $(INSTALLDIRS); do\
 	$(MAKE) -C $$dir uninstall ; \
 	done
 
-all:	recurse
-	@echo ""
-	@echo "Make complete"
+all: recurse
 
 clean:	recurse_clean
-	@echo ""
-	@echo "Make complete"
 	rm -rf rpms
 
 install:	recurse_install
-	@echo ""
-	@echo "Make complete"
 
 uninstall:	recurse_uninstall
-	@echo ""
-	@echo "Make complete"
 
-rpm:
-	rpmbuild -bb multipath-tools.spec
+rpm:	rpmbuild -bb multipath-tools.spec
